xTests - Changes
================

Created: 22nd February 2008
Updated: 23rd November 2024


    ************************************
    * Change key:                      *
    *                                  *
    *  ~  means something has changed  *
    *  +  means a new addition         *
    *  -  means removal of something   *
    *  *  means a general bullet-point *
    *                                  *
    ************************************


30th January 2025 - 0.26.0-beta2
================================

 * now ensures that does not emit ANSI colour sequences when running on Windows on an old terminal that does not support them;


31st December 2024 - 0.26.0-beta1
=================================

 * now uses `stlsoft::integral_traits<>` for integer test macros (in C++) to allow for custom integral types to be tested;
 * `temp_file` now takes a `hint_dir` parameter to allow specification of directory for (temporary) file;
 * added missing test macros `XTESTS_TEST_FLOATINGPOINT_GREATER()`, `XTESTS_TEST_FLOATINGPOINT_GREATER_OR_EQUAL()`, `XTESTS_TEST_FLOATINGPOINT_LESS()`, `XTESTS_TEST_FLOATINGPOINT_LESS_OR_EQUAL()`;
 * added macro `XTESTS_COMMANDLINE_PARSE_HELP_OR_VERBOSITY()`, which allows for a unified command-line parsing in test programs;
 * added terse forms of macros, available by including **xtests/terse-api.h**;
 * `XTESTS_COMMANDLINE_PARSE_VERBOSITY()` now also recognises, if the command-line argument `"--verbosity= . . ."` is not found, the enviroment variables `"XTESTS_VERBOSITY"` and `"TEST_VERBOSITY"`;
 * added test programs **test.scratch.all_failure_messages**, **test.scratch.basics2**, **test.scratch.custom_integral_types**,
 * substantial internal refactoring;
 * minor tidying to CMake facilities;
 * minor improvements to examples;
 * minor improvements to project boilerplate files;
 * updated **STLSoft** constructs, incl. macros;


18th November 2024 - 0.25.4
===========================

 * added CMake MSVC MT support;

