@@ -1,2 +1,3 @@
 # SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
-define_automated_test_program(example.c.runner main.c)
+define_example_program(example.c.runner main.c)
+
