@@ -1,3 +1,5 @@
 # SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
 add_subdirectory(example.cpp.temp_directory)
 add_subdirectory(example.cpp.temp_file)
+add_subdirectory(example.cpp.udt)
+
