@@ -1,3 +1,3 @@
 # SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
-define_example_program(example.c.tests main.c)
+define_example_program(example.cpp.udt main.cpp)
 
