@@ -2,7 +2,7 @@ xTests - Changes
 ================
 
 Created: 22nd February 2008
-Updated: 23rd November 2024
+Updated: 11th January 2025
 
 
     ************************************
@@ -19,6 +19,7 @@ Updated: 23rd November 2024
 30th January 2025 - 0.26.0-beta2
 ================================
 
+ * added support (including coloured output) for (in)equality testing of UDTs;
  * now ensures that does not emit ANSI colour sequences when running on Windows on an old terminal that does not support them;
 
 
